package com.workmanagement.backend.notification.entity;

public class Notification {

}
